Changes for templates:

	* The servername was hardcoded in ss_get_by_ssh.php (issue 57).
	* Added Handler_ graphs (issue 47).
	* Config files can be used instead of editing the .php file (issue 39).
	* binary log space is now calculated without a MySQL query (issue 48).
	* There was no easy way to force inputs to be filled (issue 45).
	* Some graphs were partially hidden without --lower-limit (issue 43).
	* Flipped some elements across the Y axis (issue 42).
	* Include settings from an external config file (issue 39).
	* Added Apache, Nginx, and GNU/Linux templates.
	* Unknown output is now -1 instead of 0 to prevent spikes in graphs.
	* If you want to use a script server, you must now explicitly configure it.
	* UNIX sockets weren't permitted for MySQL (issue 38).

2008-10-15: version 1.1.1

	* The tarball didn't have make-template.pl mysql_definitions.pl (issue 34)

2008-10-14: version 1.1.0

	* Graphs fetched too much data, causing errors (incompatible; issue 28, 23).
	* Output of the poller script is compressed with short value names.
	* Checks can be disabled; no need to fetch INNODB STATUS if unwanted.
	* Queries could cause a MySQL thread stack overflow (issue 19).
	* Older PHP didn't have array_change_key_case function (issue 21).
	* The PROCESS privilege is required for MySQL 5.1.29 with InnoDB (issue 22).
	* Added an aggregated view of SHOW PROCESSLIST; requires PROCESS privilege.
	* The text on the graph could overflow the right-hand edge.
	* Truncated SHOW INNODB STATUS could cause an SQL error (issue 27).
	* The poller script requires proper cmdline options (incompatible change).

2008-06-01: version 1.0.0

	* Fixed when SHOW MASTER LOGS has no File_size column.
	* Fixed Cacti-version-specific problems with include files.
	* Fixed when binary log is not enabled.
	* Fixed some caching issues.
	* Fixed make-template.pl issues when downloaded from SVN.
	* Replication graph shows only slave_lag instead of Seconds_behind_master