@@ -1,5 +1,6 @@
 Changes for templates:
 
+	* The parsing code did not handle InnoDB plugin / XtraDB (issue 52).
 	* The servername was hardcoded in ss_get_by_ssh.php (issue 57).
 	* Added Handler_ graphs (issue 47).
 	* Config files can be used instead of editing the .php file (issue 39).
